--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
          </div>
       </div>
       <!-- Shop-section -->
-       <div class="shop-nav">
+      <div class="shop-nav">
          <marquee>Welcome to Amazon Clone – Your One Stop Online Shopping Store</marquee>
-       </div>
+      </div>
       <div class="shop-section">
          <div class="box1 box">
             <p class="shop-text ">Shop for Home-items</p>
@@ -111,6 +111,47 @@
             <p class="shop-see"><a href="#"> See more</a></p>
          </div>
       </div>
+      <div class="panel">
+         <div class="panel-text">
+            <p>SHOP SMART. SAVE BIG. MEGA DISCOUNTS AVAILABLE NOW!</p>
+            <h2>EXTRA 50% OFF ON TODAY’S HOT DEALS!</h2>
+         </div>
+         
+      </div>
+      <div class="shop-section">
+         <div class="box1 box">
+            <p class="shop-text ">Shop for Home-items</p>
+            <img src="box1_image.jpg" class="shop-img" alt="">
+            <p class="shop-see"><a href="#"> See more</a></p>
+         </div>
+         <div class="box2 box">
+            <p class="shop-text ">Shop for Home-items</p>
+            <img src="box1_image.jpg" class="shop-img" alt="">
+            <p class="shop-see"><a href="#"> See more</a></p>
+         </div>
+         <div class="box3 box">
+            <p class="shop-text ">Shop for Home-items</p>
+            <img src="box1_image.jpg" class="shop-img" alt="">
+            <p class="shop-see"><a href="#"> See more</a></p>
+         </div>
+         <div class="box4 box">
+            <p class="shop-text">Shop for Home-items</p>
+            <img src="box1_image.jpg" class="shop-img" alt="">
+            <p class="shop-see"><a href="#"> See more</a></p>
+         </div>
+      </div>
+      <footer class="btm">
+         <div class="sign-in">
+            <h2>See personalized recommendations</h2>
+            <button>Sign in</button>
+            <p>New customer? <a href="#" class="link">Start here</a></p>
+         </div>
+         <div class="back">Back to top</div>
+         <div class="footerdiv">
+
+         </div>
+      </footer>
+
    </body>
 
 </html>
