--- a/index.html
+++ b/index.html
@@ -139,18 +139,57 @@
             <img src="box1_image.jpg" class="shop-img" alt="">
             <p class="shop-see"><a href="#"> See more</a></p>
          </div>
-      </div>
-      <footer class="btm">
-         <div class="sign-in">
+      </div>   
+      <div class="sign-in">
             <h2>See personalized recommendations</h2>
             <button>Sign in</button>
             <p>New customer? <a href="#" class="link">Start here</a></p>
-         </div>
-         <div class="back">Back to top</div>
-         <div class="footerdiv">
+      </div>
+      
+      <footer class="footer">
+  <div class="footer-top">
+    <a href="#">Back to top</a>
+  </div>
 
-         </div>
-      </footer>
+  <div class="footer-links">
+    <div class="footer-column">
+      <h4>Get to Know Us</h4>
+      <a href="#">About Us</a>
+      <a href="#">Careers</a>
+      <a href="#">Press Releases</a>
+      <a href="#">Amazon Science</a>
+    </div>
+
+    <div class="footer-column">
+      <h4>Connect with Us</h4>
+      <a href="#">Facebook</a>
+      <a href="#">Twitter</a>
+      <a href="#">Instagram</a>
+    </div>
+
+    <div class="footer-column">
+      <h4>Make Money with Us</h4>
+      <a href="#">Sell on Amazon</a>
+      <a href="#">Sell under Amazon Accelerator</a>
+      <a href="#">Protect and Build Your Brand</a>
+      <a href="#">Amazon Global Selling</a>
+    </div>
+
+    <div class="footer-column">
+      <h4>Let Us Help You</h4>
+      <a href="#">Your Account</a>
+      <a href="#">Returns Centre</a>
+      <a href="#">100% Purchase Protection</a>
+      <a href="#">Help</a>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2026 Amazon Clone | Designed by Chandrika</p>
+  </div>
+</footer>
+  
+     
 
    </body>
 
