--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>   
       <div class="sign-in">
             <h2>See personalized recommendations</h2>
-            <button>Sign in</button>
+            <button class="login" onclick="window.location.href='login.html'">Sign in</button>
             <p>New customer? <a href="#" class="link">Start here</a></p>
       </div>
       
@@ -188,6 +188,7 @@
     <p>© 2026 Amazon Clone | Designed by Chandrika</p>
   </div>
 </footer>
+<script src="script.js"></script>
   
      
 
